# open-mre

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_SPEC.md  LICENSE  Makefile  README.md  langgraph.json  pyproject.toml
open_mre/: __init__.py  coordinator.py  main.py  server.py  state.py
open_mre/agents/: __init__.py
open_mre/agents/behavior_analyst/: __init__.py  agent.py  schemas.py
open_mre/agents/code_extractor/: __init__.py  agent.py  schemas.py
open_mre/agents/executor/: __init__.py  agent.py  schemas.py
open_mre/agents/report_generator/: __init__.py  agent.py  schemas.py
open_mre/agents/version_validator/: __init__.py  agent.py  schemas.py
open_mre/nodes/: __init__.py  api_key_check.py
open_mre/prompts/: __init__.py  templates.py
open_mre/subagents/: __init__.py  behavior_analyst.py  code_extractor.py  executor.py  report_generator.py  version_validator.py
open_mre/tools/: __init__.py  code_executor.py  daytona_sandbox.py  pypi_checker.py
tests/: __init__.py
tests/fixtures/: invalid_issue.md  partial_issue.md  real_issue_argsschema.md  real_issue_azureopenai.md  real_issue_invalidtoolcalls.md  valid_issue.md
tests/integration_tests/: __init__.py  test_coordinator.py
tests/unit_tests/: __init__.py  test_tools.py
